--- a/index.html
+++ b/index.html
@@ -93,19 +93,19 @@
                 <h2 class="title-section services-section__title">Our Other Services</h2>
                 <div class="services-wrap">
                     <div class="services">
-                        <img class="services__img" src="/public/images/1.png" alt="Private Charter">
+                        <img class="services__img" src="public/images/1.png" alt="Private Charter">
                         <h2 class="services__title">Private Charter</h2>
                         <p class="services__text">Pinjam Mobil Rent also offers you discreet and speedy, transfers via
                             helicopter or private planes.</p>
                     </div>
                     <div class="services">
-                        <img class="services__img" src="/public/images/2.png" alt="Chauffer Driven Car Rentals">
+                        <img class="services__img" src="public/images/2.png" alt="Chauffer Driven Car Rentals">
                         <h2 class="services__title">Chauffer Driven Car Rentals</h2>
                         <p class="services__text">Our chauffers are professional drivers who provide a discreet,
                             reliable punctual and professional service.</p>
                     </div>
                     <div class="services">
-                        <img class="services__img" src="/public/images/3.png" alt="Wedding Car Rentals">
+                        <img class="services__img" src="public/images/3.png" alt="Wedding Car Rentals">
                         <h2 class="services__title">Wedding Car Rentals</h2>
                         <p class="services__text">If you want to celebrate your wedding in style and elegance, choose
                             one car from our luxury collection.</p>
@@ -118,7 +118,7 @@
                 <h2 class="title-section destination-section__title">Popular Destination for Car Rentals</h2>
                 <div class="destination-wrap">
                     <div class="destination">
-                        <img class="destination__img" src="/public/images/d1.png" alt="destination to">
+                        <img class="destination__img" src="public/images/d1.png" alt="destination to">
                         <div class="destination__info">
                             <h3 class="destination__title">London</h3>
                             <p class="destination__text">Car hire in 75 pick-up locations</p>
@@ -127,7 +127,7 @@
                         </div>
                     </div>
                     <div class="destination">
-                        <img class="destination__img" src="/public/images/d2.png" alt="destination to">
+                        <img class="destination__img" src="public/images/d2.png" alt="destination to">
                         <div class="destination__info">
                             <h3 class="destination__title">Madrid</h3>
                             <p class="destination__text">Car hire in 75 pick-up locations</p>
@@ -136,7 +136,7 @@
                         </div>
                     </div>
                     <div class="destination">
-                        <img class="destination__img" src="/public/images/d3.png" alt="destination to">
+                        <img class="destination__img" src="public/images/d3.png" alt="destination to">
                         <div class="destination__info">
                             <h3 class="destination__title">Paris</h3>
                             <p class="destination__text">Car hire in 75 pick-up locations</p>
@@ -145,7 +145,7 @@
                         </div>
                     </div>
                     <div class="destination">
-                        <img class="destination__img" src="/public/images/d4.png" alt="destination to">
+                        <img class="destination__img" src="public/images/d4.png" alt="destination to">
                         <div class="destination__info">
                             <h3 class="destination__title">Dubai</h3>
                             <p class="destination__text">Car hire in 75 pick-up locations</p>
@@ -154,7 +154,7 @@
                         </div>
                     </div>
                     <div class="destination">
-                        <img class="destination__img" src="/public/images/d5.png" alt="destination to">
+                        <img class="destination__img" src="public/images/d5.png" alt="destination to">
                         <div class="destination__info">
                             <h3 class="destination__title">Roma</h3>
                             <p class="destination__text">Car hire in 75 pick-up locations</p>
@@ -163,7 +163,7 @@
                         </div>
                     </div>
                     <div class="destination">
-                        <img class="destination__img" src="/public/images/d6.png" alt="destination to">
+                        <img class="destination__img" src="public/images/d6.png" alt="destination to">
                         <div class="destination__info">
                             <h3 class="destination__title">Jakarta</h3>
                             <p class="destination__text">Car hire in 75 pick-up locations</p>
