--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
             </div>
         </div>
     </footer>
+    <script src="./jquery-3.7.1.min.js"></script>
     <script src="./main.js"></script>
 </body>
 
